# cs-study

./: .gitignore  README.md
2022DigitCircuit/DigitExperiment/: 2022数电实验提高班名单-详细.xlsx  2022数电实验登统.xlsx  2022秋数电实验提高班分组.xlsx  lab.md  实验报告模板.md
AI/exp2/: Lab 02 实验报告.md
Arithmetic/project1/: iterativeFFT.cpp  left  left_shift.cpp  max_continuous_string.cpp  merge_sort  merge_sort.cpp  optimal_bst  optimal_bst.cpp  qsort  qsort.cpp  test  test.cpp
Bigdata/: HW 04.md  HW 06.md  HW02.md
Compilers/HW/: gcd.asm  gcd.cpp  hw13.asm  hw13.cpp  hw15.cpp  test.asm  test.c
Compilers/PW1/: HW01-01.md  HW01-02.md  HW01-03.md  Makefile  disassemble.S  labLexer-1.c  sample-32-clang.S  sample-32.S  sample-64-clang.S  sample-64.S  sort-clang-32.s  sort-clang-64.s  sort-gcc-32.s  sort-gcc-64.s  sort.c  sort.i  sort.s
Compilers/PW4/: CMakeLists.txt  dead-code-elimination.sy
Compilers/PW5/: CMakeLists.txt
ComputerArchitecture/: README.md
ComputerArchitecture/Lab1/: .$PART-RV32I-Core-Design-Figure.drawio.bkp  Lab 1 Report.md  PART-RV32I-Core-Design-Figure.drawio  README.md  lab1.md
ComputerArchitecture/Lab5/: CMakeLists.txt  Lab 5 实验报告.md  test.py
ComputerArchitecture/Lab5/CPU-MatMul/: CMakeLists.txt  Makefile  MatMul-AVX.cpp  MatMul-AVXblock.cpp  MatMul-Baseline.cpp
ComputerArchitecture/Lab5/GPU-MatMul/: CMakeLists.txt  Makefile  MatMul-Baseline.cu  MatMul-Block.cu  main.cu
DataStructure/: arith_expression  arith_expression.cpp
Database/: HW 05.md  HW04.md
DigitalImage/: python.py  数字图像处理与分析 实验报告.md  数字图像处理与分析期末复习.md
QCML/: mindspore_qnn_for_nlp.py
(+673 files in other folders)
